# SnowSim

./: .gitignore  CMakeLists.txt  README.md
include/: cpu_backend.hpp  cuda_backend.hpp  my_helper.hpp  simulation.hpp  types.hpp
resources/configs/: default.json  placeholder.json
resources/shaders/: air_mask.frag  air_mask.vert  arrow.frag  arrow.vert  basic_color_lit.frag  basic_color_lit.vert
src/: cpu_backend.cpp  cuda_backend.cu  main.cpp  my_helper.cpp
tests/: run_tests_pretty.ps1
tests/configs/: test_1.json
tests/unit/: config_loader_tests.cpp  config_loader_tests_config_1.json  cpu_backend_tests.cpp  snow_source_scenarios.json  snow_source_tests.cpp  test_tests.cpp
tests/unit/support/: my_catch_warning.hpp
viz/: arrow_layer.cpp  arrow_layer.hpp  camera.cpp  camera.hpp  cube_mesh.cpp  cube_mesh.hpp  grid_mesh.cpp  grid_mesh.hpp  renderer.cpp  renderer.hpp  shader_program.cpp  shader_program.hpp
